[package]
name = "webhook"
version = "0.1.0"
authors = ["sourtaste000 <sourtaste000@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.125"
serde_derive = "1.0.125"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0"